--- a/index.html
+++ b/index.html
@@ -2,156 +2,185 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bharat TaxAssist</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
+      font-family: 'Roboto', sans-serif;
+      background-color: #fff;
     }
+
     header {
-      background: #008000;
-      color: white;
-      padding: 20px;
-      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 30px;
+      background: #fff;
+      border-bottom: 1px solid #ddd;
     }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
+
+    .logo {
+      font-size: 24px;
       font-weight: bold;
     }
-    .hero {
-      padding: 60px 20px;
-      text-align: center;
-      background: #e6ffe6;
+    .logo span {
+      color: #3CB371;
     }
-    .hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    .section {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .services {
+
+    nav ul {
+      list-style: none;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
       gap: 20px;
+      padding: 0;
+      margin: 0;
     }
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      width: 250px;
-    }
-    .card h3 {
-      margin-top: 0;
-      color: #008000;
-    }
-    .form-section {
-      background: #fff;
-      padding: 40px 20px;
-      max-width: 600px;
-      margin: auto;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    form button {
-      background: #008000;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
+
+    nav ul li {
+      font-size: 14px;
       cursor: pointer;
     }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 15px;
+
+    .hero {
+      background: url('https://i.imgur.com/ctn5Toq.jpeg') center/cover no-repeat;
+      padding: 60px 30px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      color: #fff;
     }
+
+    .services {
+      max-width: 60%;
+      display: grid;
+      grid-template-columns: repeat(4, 120px);
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .service-box {
+      background: #fff;
+      color: #000;
+      padding: 10px;
+      border-radius: 6px;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .form-box {
+      background: #fff;
+      color: #000;
+      padding: 20px;
+      border-radius: 8px;
+      width: 300px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+    .form-box h3 {
+      margin-top: 0;
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    .form-box input, .form-box select, .form-box button {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .form-box button {
+      background-color: #a7d92b;
+      border: none;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
     @media (max-width: 768px) {
-      .services {
+      .hero {
         flex-direction: column;
         align-items: center;
+      }
+
+      .services {
+        grid-template-columns: repeat(2, 140px);
+        max-width: 100%;
+        justify-content: center;
       }
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>Bharat TaxAssist</h1>
+    <div class="logo">BHARAT <span>TaxAssist</span></div>
     <nav>
-      <a href="#services">Services</a>
-      <a href="#about">About</a>
-      <a href="#form">Call Back</a>
+      <ul>
+        <li>Business Formation</li>
+        <li>Tax Registration / Filing</li>
+        <li>IPR</li>
+        <li>Compliances</li>
+        <li>DSC & Tokens</li>
+        <li>Pay Rent</li>
+        <li>Support</li>
+      </ul>
     </nav>
   </header>
 
   <section class="hero">
-    <h1>Register & Start Your Business</h1>
-    <p>GST | MSME | Income Tax | Company Registration</p>
-  </section>
-
-  <section class="section" id="services">
-    <h2 style="text-align:center;">Our Services</h2>
     <div class="services">
-      <div class="card">
-        <h3>GST Registration</h3>
-        <p>Fast GST filing & registration for individuals and businesses.</p>
-        <p><strong>₹499</strong></p>
+      <div class="service-box">
+        <img src="https://i.imgur.com/I7q0Xlz.png" alt="GST" width="50" />
+        <div>GST Registration</div>
       </div>
-      <div class="card">
-        <h3>Income Tax Filing</h3>
-        <p>Get expert help with your ITR return at an affordable price.</p>
-        <p><strong>₹599</strong></p>
+      <div class="service-box">
+        <img src="https://i.imgur.com/8jYPslM.png" alt="Business" width="50" />
+        <div>Business Registration</div>
       </div>
-      <div class="card">
-        <h3>MSME Registration</h3>
-        <p>Register your business under MSME to enjoy government benefits.</p>
-        <p><strong>₹399</strong></p>
+      <div class="service-box">
+        <img src="https://i.imgur.com/WQfzfOU.png" alt="MSME" width="50" />
+        <div>MSME Registration</div>
+      </div>
+      <div class="service-box">
+        <img src="https://i.imgur.com/1hvOcOv.png" alt="DSC" width="50" />
+        <div>DSC Registration</div>
+      </div>
+      <div class="service-box">
+        <img src="https://i.imgur.com/I7q0Xlz.png" alt="GST Return" width="50" />
+        <div>GST Return Filing</div>
+      </div>
+      <div class="service-box">
+        <img src="https://i.imgur.com/d7Mv9Er.png" alt="Income Tax" width="50" />
+        <div>Income Tax Return</div>
+      </div>
+      <div class="service-box">
+        <img src="https://i.imgur.com/YX0EopV.png" alt="FSSAI" width="50" />
+        <div>FSSAI Registration</div>
+      </div>
+      <div class="service-box">
+        <img src="https://i.imgur.com/vD7TcGL.png" alt="Trademark" width="50" />
+        <div>Trademark Registration</div>
       </div>
     </div>
+
+    <div class="form-box">
+      <h3>Get A Call Back Now</h3>
+      <form action="https://formspree.io/f/your-form-id" method="POST">
+        <input type="text" name="name" placeholder="Full Name*" required>
+        <input type="email" name="email" placeholder="E-Mail*" required>
+        <input type="text" name="mobile" placeholder="Mobile No*" required>
+        <select name="service">
+          <option>Select Any One</option>
+          <option>GST Registration</option>
+          <option>Business Registration</option>
+          <option>Trademark</option>
+          <option>FSSAI</option>
+        </select>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </section>
-
-  <section class="section" id="about">
-    <h2 style="text-align:center;">About Bharat TaxAssist</h2>
-    <p style="max-width:700px;margin:auto;text-align:center;">
-      We are your trusted tax filing and business registration partner in India.
-      With expert advisors and affordable pricing, we help you focus on growing your business while we handle the paperwork.
-    </p>
-  </section>
-
-  <section class="form-section" id="form">
-    <h2 style="text-align:center;">Get a Call Back</h2>
-    <form action="https://formspree.io/f/your-form-id" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="tel" name="phone" placeholder="Phone Number" required />
-      <textarea name="message" placeholder="Message (Optional)" rows="4"></textarea>
-      <button type="submit">Request Call Back</button>
-    </form>
-    <p style="text-align:center;font-size:0.9rem;color:#666;">We’ll reach out within 24 hours.</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Bharat TaxAssist. All rights reserved.</p>
-  </footer>
-
 </body>
 </html>
