--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      line-height: 1.6;
       background: #f9f9f9;
       color: #333;
     }
@@ -16,8 +15,10 @@
       background: #008000;
       color: white;
       padding: 20px;
-      text-align: center;
       position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .hamburger {
       position: absolute;
@@ -25,7 +26,6 @@
       top: 20px;
       font-size: 28px;
       cursor: pointer;
-      user-select: none;
     }
     nav a {
       color: white;
@@ -33,19 +33,50 @@
       text-decoration: none;
       font-weight: bold;
     }
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background: #004d00;
+      color: white;
+      padding: 20px;
+      transition: left 0.3s ease;
+      z-index: 1000;
+    }
+    .sidebar.active {
+      left: 0;
+    }
+    .sidebar h3 {
+      margin-top: 0;
+    }
+    .sidebar button {
+      background: white;
+      color: #004d00;
+      border: none;
+      padding: 10px;
+      margin-top: 10px;
+      cursor: pointer;
+      width: 100%;
+      border-radius: 4px;
+    }
+    .admin-login {
+      display: none;
+      margin-top: 20px;
+    }
+    .admin-upload {
+      display: none;
+      margin-top: 20px;
+    }
     .hero {
-      position: relative;
-      padding: 60px 20px;
       text-align: center;
+      padding: 60px 20px;
       background: #e6ffe6;
       background-size: cover;
       background-position: center;
-      color: #000;
       transition: background-image 1s ease-in-out;
-    }
-    #uploadContainer {
-      display: none;
-      margin-top: 20px;
+      color: black;
     }
     .section {
       padding: 40px 20px;
@@ -99,121 +130,140 @@
       text-align: center;
       padding: 15px;
     }
-    @media (max-width: 768px) {
-      .services {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <header>
-    <div class="hamburger" onclick="openMenu()">☰</div>
-    <h1>Bharat TaxAssist</h1>
-    <nav>
-      <a href="#services">Services</a>
-      <a href="#about">About</a>
-      <a href="#form">Call Back</a>
-    </nav>
-  </header>
+<header>
+  <div class="hamburger" onclick="toggleSidebar()">☰</div>
+  <h1>Bharat TaxAssist</h1>
+</header>
 
-  <!-- Hero with slideshow upload -->
-  <section class="hero" id="hero">
-    <h1>Register & Start Your Business</h1>
-    <p>GST | MSME | Income Tax | Company Registration</p>
+<!-- Sidebar menu -->
+<div class="sidebar" id="sidebar">
+  <h3>Menu</h3>
+  <button onclick="closeSidebar()">Home</button>
+  <button onclick="closeSidebar()">Services</button>
+  <button onclick="closeSidebar()">Contact</button>
+  <button onclick="showAdminLogin()">Admin</button>
 
-    <div id="uploadContainer">
-      <label for="slideshowUpload">Upload slideshow images:</label>
-      <input type="file" id="slideshowUpload" multiple accept="image/*" />
+  <div class="admin-login" id="adminLogin">
+    <input type="password" id="adminPassword" placeholder="Enter password" />
+    <button onclick="validateAdmin()">Submit</button>
+  </div>
+
+  <div class="admin-upload" id="adminUpload">
+    <label>Upload slideshow images:</label>
+    <input type="file" id="slideshowInput" multiple accept="image/*" />
+  </div>
+</div>
+
+<!-- Hero section with slideshow -->
+<section class="hero" id="hero">
+  <h1>Register & Start Your Business</h1>
+  <p>GST | MSME | Income Tax | Company Registration</p>
+</section>
+
+<!-- Main content -->
+<section class="section" id="services">
+  <h2 style="text-align:center;">Our Services</h2>
+  <div class="services">
+    <div class="card">
+      <h3>GST Registration</h3>
+      <p>Fast GST filing & registration for individuals and businesses.</p>
+      <p><strong>₹999</strong></p>
     </div>
-  </section>
-
-  <section class="section" id="services">
-    <h2 style="text-align:center;">Our Services</h2>
-    <div class="services">
-      <div class="card">
-        <h3>GST Registration</h3>
-        <p>Fast GST filing & registration for individuals and businesses.</p>
-        <p><strong>₹999</strong></p>
-      </div>
-      <div class="card">
-        <h3>Income Tax Filing</h3>
-        <p>Get expert help with your ITR return at an affordable price.</p>
-        <p><strong>₹2000</strong></p>
-      </div>
-      <div class="card">
-        <h3>MSME Registration</h3>
-        <p>Register your business under MSME to enjoy government benefits.</p>
-        <p><strong>₹999</strong></p>
-      </div>
+    <div class="card">
+      <h3>Income Tax Filing</h3>
+      <p>Get expert help with your ITR return at an affordable price.</p>
+      <p><strong>₹2000</strong></p>
     </div>
-  </section>
+    <div class="card">
+      <h3>MSME Registration</h3>
+      <p>Register your business under MSME to enjoy government benefits.</p>
+      <p><strong>₹999</strong></p>
+    </div>
+  </div>
+</section>
 
-  <section class="section" id="about">
-    <h2 style="text-align:center;">About Bharat TaxAssist</h2>
-    <p style="max-width:700px;margin:auto;text-align:center;">
-      We are your trusted tax filing and business registration partner in India.
-      With expert advisors and affordable pricing, we help you focus on growing your business while we handle the paperwork.
-    </p>
-  </section>
+<section class="section" id="about">
+  <h2 style="text-align:center;">About Bharat TaxAssist</h2>
+  <p style="max-width:700px;margin:auto;text-align:center;">
+    We are your trusted tax filing and business registration partner in India.
+    With expert advisors and affordable pricing, we help you focus on growing your business while we handle the paperwork.
+  </p>
+</section>
 
-  <section class="form-section" id="form">
-    <h2 style="text-align:center;">Get a Call Back</h2>
-    <form action="https://formspree.io/f/xovdezwy" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="tel" name="phone" placeholder="Phone Number" required />
-      <textarea name="message" placeholder="Message (Optional)" rows="4"></textarea>
-      <button type="submit">Request Call Back</button>
-    </form>
-    <p style="text-align:center;font-size:0.9rem;color:#666;">We’ll reach out within 24 hours.</p>
-  </section>
+<section class="form-section" id="form">
+  <h2 style="text-align:center;">Get a Call Back</h2>
+  <form action="https://formspree.io/f/xovdezwy" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="tel" name="phone" placeholder="Phone Number" required />
+    <textarea name="message" placeholder="Message (Optional)" rows="4"></textarea>
+    <button type="submit">Request Call Back</button>
+  </form>
+  <p style="text-align:center;font-size:0.9rem;color:#666;">We’ll reach out within 24 hours.</p>
+</section>
 
-  <footer>
-    <p>&copy; 2025 Bharat TaxAssist. All rights reserved.</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Bharat TaxAssist. All rights reserved.</p>
+</footer>
 
-  <!-- Slideshow + Menu Script -->
-  <script>
-    const hero = document.getElementById('hero');
-    const input = document.getElementById('slideshowUpload');
-    const uploadContainer = document.getElementById('uploadContainer');
-    let slideImages = [];
-    let currentSlide = 0;
-    let interval;
+<!-- JavaScript -->
+<script>
+  const sidebar = document.getElementById('sidebar');
+  const adminLogin = document.getElementById('adminLogin');
+  const adminUpload = document.getElementById('adminUpload');
+  const hero = document.getElementById('hero');
+  const input = document.getElementById('slideshowInput');
+  let slideImages = [];
+  let currentSlide = 0;
+  let interval;
 
-    function openMenu() {
-      const password = prompt("Enter password to access upload:");
-      if (password === "Bharattaxassist@3010") {
-        uploadContainer.style.display = "block";
-      } else {
-        alert("Incorrect password.");
-      }
+  function toggleSidebar() {
+    sidebar.classList.toggle('active');
+  }
+
+  function closeSidebar() {
+    sidebar.classList.remove('active');
+  }
+
+  function showAdminLogin() {
+    adminLogin.style.display = "block";
+  }
+
+  function validateAdmin() {
+    const pass = document.getElementById('adminPassword').value;
+    if (pass === "Bharattaxassist@3010") {
+      adminUpload.style.display = "block";
+      alert("Access granted.");
+    } else {
+      alert("Incorrect password.");
     }
+  }
 
-    input.addEventListener('change', function () {
-      slideImages = [];
-      for (let file of input.files) {
-        const reader = new FileReader();
-        reader.onload = function (e) {
-          slideImages.push(e.target.result);
-          if (slideImages.length === 1) startSlideshow();
-        };
-        reader.readAsDataURL(file);
-      }
-    });
-
-    function startSlideshow() {
-      if (interval) clearInterval(interval);
-      hero.style.backgroundImage = `url('${slideImages[0]}')`;
-      currentSlide = 0;
-      interval = setInterval(() => {
-        currentSlide = (currentSlide + 1) % slideImages.length;
-        hero.style.backgroundImage = `url('${slideImages[currentSlide]}')`;
-      }, 4000);
+  input.addEventListener('change', function () {
+    slideImages = [];
+    for (let file of input.files) {
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        slideImages.push(e.target.result);
+        if (slideImages.length === 1) startSlideshow();
+      };
+      reader.readAsDataURL(file);
     }
-  </script>
+  });
+
+  function startSlideshow() {
+    if (interval) clearInterval(interval);
+    hero.style.backgroundImage = `url('${slideImages[0]}')`;
+    currentSlide = 0;
+    interval = setInterval(() => {
+      currentSlide = (currentSlide + 1) % slideImages.length;
+      hero.style.backgroundImage = `url('${slideImages[currentSlide]}')`;
+    }, 4000);
+  }
+</script>
 
 </body>
 </html>
