--- a/index.html
+++ b/index.html
@@ -2,75 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bharat TaxAssist</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
+      background: #ffffff;
+      color: #001f3f;
     }
     header {
-      background: #008000;
+      background: #001f3f;
       color: white;
       padding: 20px;
-      text-align: center;
-      position: relative;
-    }
-    .menu-icon {
-      position: absolute;
-      left: 20px;
-      top: 20px;
-      font-size: 24px;
-      cursor: pointer;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     nav a {
       color: white;
-      margin: 0 15px;
+      margin-left: 20px;
       text-decoration: none;
       font-weight: bold;
     }
-    .menu {
-      display: none;
-      position: absolute;
-      top: 60px;
-      left: 20px;
-      background: white;
-      border: 1px solid #ccc;
-      padding: 10px;
-      z-index: 100;
-    }
-    .menu button {
-      display: block;
-      width: 100%;
-      background: none;
-      border: none;
-      padding: 10px;
-      text-align: left;
-      cursor: pointer;
-    }
     .hero {
-      height: 300px;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      padding: 0;
       text-align: center;
-      position: relative;
-      background-size: cover;
-      background-position: center;
+      background: url('ChatGPT Image May 4, 2025, 05_11_01 PM.png') no-repeat center center/cover;
+      height: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
     }
-    .overlay {
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.4);
-    }
-    .hero h1, .hero p {
-      position: relative;
-      z-index: 2;
+    .hero h1 {
+      font-size: 2.5rem;
+      background: rgba(0,0,0,0.5);
+      padding: 10px 20px;
+      border-radius: 10px;
     }
     .section {
       padding: 40px 20px;
@@ -92,17 +62,17 @@
     }
     .card h3 {
       margin-top: 0;
-      color: #008000;
+      color: #001f3f;
     }
     .form-section {
-      background: #fff;
+      background: #f0f8ff;
       padding: 40px 20px;
       max-width: 600px;
       margin: auto;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    form input, form textarea {
+    form input, form textarea, form select {
       width: 100%;
       padding: 10px;
       margin-bottom: 15px;
@@ -110,7 +80,7 @@
       border-radius: 6px;
     }
     form button {
-      background: #008000;
+      background: #001f3f;
       color: white;
       padding: 12px 20px;
       border: none;
@@ -119,52 +89,33 @@
       cursor: pointer;
     }
     footer {
-      background: #333;
+      background: #001f3f;
       color: white;
       text-align: center;
       padding: 15px;
     }
-    #adminPanel {
-      display: none;
-      padding: 20px;
-      background: #fff;
-      max-width: 600px;
-      margin: 20px auto;
-      border: 1px solid #ccc;
-    }
-    #adminPanel textarea {
-      width: 100%;
-      height: 120px;
-      margin-bottom: 10px;
+    @media (max-width: 768px) {
+      .services {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <div class="menu-icon" onclick="toggleMenu()">☰</div>
     <h1>Bharat TaxAssist</h1>
     <nav>
       <a href="#services">Services</a>
       <a href="#about">About</a>
       <a href="#form">Call Back</a>
     </nav>
-    <div class="menu" id="menu">
-      <button onclick="askPassword()">Admin</button>
-    </div>
   </header>
 
-  <section class="hero" id="hero">
-    <div class="overlay"></div>
-    <h1>Register & Start Your Business</h1>
-    <p>GST | MSME | Income Tax | Company Registration</p>
+  <section class="hero">
+    <h1>GST RETURN FILING MADE EASY</h1>
   </section>
-
-  <div id="adminPanel">
-    <h3>Admin Panel: Set Slideshow Image Links</h3>
-    <textarea id="imageLinks" placeholder="Paste direct image links, one per line..."></textarea>
-    <button onclick="saveLinks()">Save Links</button>
-  </div>
 
   <section class="section" id="services">
     <h2 style="text-align:center;">Our Services</h2>
@@ -199,6 +150,19 @@
     <h2 style="text-align:center;">Get a Call Back</h2>
     <form action="https://formspree.io/f/xovdezwy" method="POST">
       <input type="text" name="name" placeholder="Your Name" required />
+      <select name="city" required>
+        <option value="">Select Your City</option>
+        <option value="Mumbai">Mumbai</option>
+        <option value="Delhi">Delhi</option>
+        <option value="Bangalore">Bangalore</option>
+        <option value="Hyderabad">Hyderabad</option>
+        <option value="Ahmedabad">Ahmedabad</option>
+        <option value="Chennai">Chennai</option>
+        <option value="Kolkata">Kolkata</option>
+        <option value="Pune">Pune</option>
+        <option value="Jaipur">Jaipur</option>
+        <option value="Lucknow">Lucknow</option>
+      </select>
       <input type="tel" name="phone" placeholder="Phone Number" required />
       <textarea name="message" placeholder="Message (Optional)" rows="4"></textarea>
       <button type="submit">Request Call Back</button>
@@ -209,54 +173,6 @@
   <footer>
     <p>&copy; 2025 Bharat TaxAssist. All rights reserved.</p>
   </footer>
-
-  <script>
-    let currentIndex = 0;
-    let images = [];
-
-    function toggleMenu() {
-      const menu = document.getElementById("menu");
-      menu.style.display = menu.style.display === "block" ? "none" : "block";
-    }
-
-    function askPassword() {
-      const pass = prompt("Enter admin password:");
-      if (pass === "Bharattaxassist@3010") {
-        document.getElementById("adminPanel").style.display = "block";
-        document.getElementById("menu").style.display = "none";
-        document.getElementById("imageLinks").value = (localStorage.getItem("slideshowImages") || "").split(',').join('\n');
-      } else {
-        alert("Wrong password!");
-      }
-    }
-
-    function saveLinks() {
-      const input = document.getElementById("imageLinks").value.trim();
-      const links = input.split("\n").filter(link => link.trim() !== "");
-      localStorage.setItem("slideshowImages", links.join(','));
-      alert("Slideshow updated!");
-      location.reload();
-    }
-
-    function startSlideshow() {
-      const saved = localStorage.getItem("slideshowImages");
-      if (!saved) return;
-      images = saved.split(",");
-      if (images.length === 0) return;
-      updateHeroBackground();
-      setInterval(() => {
-        currentIndex = (currentIndex + 1) % images.length;
-        updateHeroBackground();
-      }, 4000);
-    }
-
-    function updateHeroBackground() {
-      const hero = document.getElementById("hero");
-      hero.style.backgroundImage = `url("${images[currentIndex]}")`;
-    }
-
-    window.onload = startSlideshow;
-  </script>
 
 </body>
 </html>
